Scrollbar stepper issue fixed

--- a/gtk-3.20/gtk-widgets.css
+++ b/gtk-3.20/gtk-widgets.css
@@ -1858,11 +1858,13 @@ scrollbar.vertical button.up {
 }
 
 scrollbar.horizontal button.down {
-    -gtk-icon-source: -gtk-icontheme("pan-right-symbolic");
+/*    -gtk-icon-source: -gtk-icontheme("pan-right-symbolic");*/
+    -gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
 }
 
 scrollbar.horizontal button.up {
-    -gtk-icon-source: -gtk-icontheme("pan-left-symbolic");
+/*    -gtk-icon-source: -gtk-icontheme("pan-left-symbolic");*/
+    -gtk-icon-source: -gtk-icontheme("pan-start-symbolic");
 }
 
 treeview ~ scrollbar.vertical {
@@ -2022,7 +2024,7 @@ filechooser placessidebar list,
 .sidebar view:backdrop,
 .sidebar > view:backdrop,
 .sidebar scrolledwindow:backdrop {
-    background-color: @theme_bg_color;
+    background-color: @dark_bg_color;
 }
 
 .sidebar row:selected,
